# password-reset

./: .gitignore  Makefile  pyproject.toml
iso/: packages.x86_64  profiledef.sh
iso/airootfs/etc/: group  gshadow  os-release  passwd  profile  shadow  sudoers
iso/airootfs/etc/skel/: .bash_profile
iso/airootfs/etc/systemd/system/getty@tty1.service.d/: autologin.conf
iso/airootfs/root/: .zlogin
iso/efiboot/loader/entries/: 01-archiso-x86_64-linux.conf  02-archiso-x86_64-speech-linux.conf
iso/grub/: grub.cfg
iso/syslinux/: syslinux-linux.cfg  syslinux.cfg
password_reset/: enums.py  main.py  schemes.py
password_reset/services/: __init__.py  parted.py
password_reset/utils/: __init__.py  crypt.py  lsblk.py  os.py
